# skia-pathops

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  benchmarks.py  build-requirements.txt  build_skia.py  build_skia.sh  config.sh  main.cpp  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
ci/: download_libskia.py  dump_env_vars.sh  pyenv_install_python.sh
src/cpp/: SkMallocThrow.cpp
src/python/pathops/: __init__.py  _pathops.pxd  _pathops.pyx  errors.py  operations.py
src/python/pathops/_skia/: core.pxd  pathops.pxd
src/python/skia/: __init__.py  core.pxd  core.pyx  pathops.pxd  pathops.pyx
tests/: core_test.py  operations_test.py  pathops_test.py
