[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm",
    "cython >= 3.2.0",
]

[tool.cibuildwheel]
# Run abi3audit after the default repair commands to scan for abi3 violations
# https://github.com/pypa/abi3audit
# Only on Unix platforms (Linux/macOS) since Windows has no default repair command
[[tool.cibuildwheel.overrides]]
select = "cp*-{*linux_*,*macosx_*}"
inherit.repair-wheel-command = "append"
repair-wheel-command = "pipx run abi3audit --strict --report {wheel}"
